test/errors/resolution/nonIterable.chpl
var x = 1;
for i in x {}
for i in 1 {}
