test/errors/resolution/nonIterable.1.good
nonIterable.chpl:2: error: cannot iterate over a value of type 'int(64)'
nonIterable.chpl:3: error: cannot iterate over a value of type 'int(64)'
